# gensurvey

./: .gitignore  README.md
gensurvey/: Cargo.toml  README.md
gensurvey/completions/: bash  fish  zsh
gensurvey/src/: main.rs  model.rs  render.rs  scripts.rs  templates.rs
scaffold/: example.jsonc
server/: .gitignore  Cargo.toml  README.md
server/src/: main.rs
