[package]
name = "gensurvey-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
humantime = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
chrono = { version = "0.4", features=["serde"] }
